# polymarket-copy-trading-bot-telegram-ui

./: .config.example  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: core.rs  engine.rs
src/config/: mod.rs
src/markets/: mod.rs  sport1.rs  sport2.rs  store.rs
src/models/: mod.rs
src/trading/: exec.rs  guard.rs  mod.rs
src/utils/: mod.rs
